refactor: DropZone component

--- a/components/atoms/dropZone/dropZone.module.scss
+++ b/components/atoms/dropZone/dropZone.module.scss
@@ -9,12 +9,12 @@
   flex-direction: column;
   border-radius: var(--radius-medium);
   padding: 2rem 1rem;
-  grid-row: 2 / 4;
   text-align: center;
   cursor: pointer;
 
   @include common.mediaquery('xl') {
     height: 100%;
+    max-width: 50rem;
     padding: 3rem;
   }
 }
