--- a/components/molecules/input/input.module.scss
+++ b/components/molecules/input/input.module.scss
@@ -27,6 +27,7 @@
 .input:focus+.label {
   transform: translateY(-2.5rem);
   background-color: var(--bg-primary);
+  color: var(--text-primary);
 
   @include common.mediaquery('xl') {
     font-size: 2rem;
