--- a/components/molecules/cropPostImage/cropPostImage.module.scss
+++ b/components/molecules/cropPostImage/cropPostImage.module.scss
@@ -18,16 +18,9 @@
 
 .reactCrop {
   border-radius: var(--radius-medium);
+  max-width: 60rem;
+  border: 4px solid var(--color-primary);
   grid-row: 2 / 5;
-
-  @include common.mediaquery('xl') {
-    height: 100%;
-
-    &img {
-      height: 100%;
-    }
-  }
-
 }
 
 .heading {
@@ -36,20 +29,17 @@
 
 .aspectRatioButtons {
   display: flex;
-  grid-column: 2 / 2;
-  gap: 3rem;
+  gap: 1rem;
   justify-content: center;
 
   @include common.mediaquery('xl') {
     justify-content: space-around;
-    gap: 0;
+    gap: 5rem;
   }
 }
 
 .buttonCenter {
   display: flex;
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
   justify-content: center;
   align-items: center;
 }
