--- a/components/organisms/Header/header.module.scss
+++ b/components/organisms/Header/header.module.scss
@@ -37,7 +37,7 @@
   background-color: var(--bg-white);
   bottom: 0;
   left: 0;
-  padding: 1rem 0;
+  padding-top: 0.5rem;
   border-top: var(--border-secondary);
   z-index: 1;
 
