--- a/components/pages/createPost/createPost.module.scss
+++ b/components/pages/createPost/createPost.module.scss
@@ -10,22 +10,19 @@
   gap: 3rem;
   padding-bottom: 5rem;
 
-  @include common.mediaquery('xl') {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+
+  @include common.mediaquery('lg') {
     gap: 5rem;
   }
 }
 
 .heading {
-  grid-column: 1 / 3;
   text-align: center;
 }
 
 
 .buttons {
   display: flex;
-  grid-column: 1 / 3;
   justify-content: center;
   gap: 7rem;
 }
