feat: handleDropImage util function

--- a/components/atoms/dropZone/dropZone.module.scss
+++ b/components/atoms/dropZone/dropZone.module.scss
@@ -11,10 +11,18 @@
   padding: 2rem 1rem;
   text-align: center;
   cursor: pointer;
+  max-width: 50rem;
+
+  &>* {
+    pointer-events: none;
+  }
+
+  &:hover {
+    @extend .dropZoneActive;
+  }
 
   @include common.mediaquery('xl') {
     height: 100%;
-    max-width: 50rem;
     padding: 3rem;
   }
 }
@@ -22,7 +30,6 @@
 .dropZoneActive {
   color: var(--color-primary);
   border-color: var(--color-primary);
-  background-color: var(--bg-gray);
 }
 
 .dropIcon {
