--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -14,7 +14,7 @@
 
   &:hover {
     &:not(:disabled) {
-      background-color: var(--color-primary-light);
+      background-color: var(--color-secondary);
     }
   }
 
