--- a/components/molecules/cropPostImage/cropPostImage.module.scss
+++ b/components/molecules/cropPostImage/cropPostImage.module.scss
@@ -1,41 +1,12 @@
 @use '/styles/common.scss';
 
-.cropPost {
+.reactCrop {
+  border-radius: var(--radius-medium);
+  border: 4px solid var(--color-secondary);
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  width: 100%;
-  font-weight: 600;
-  cursor: pointer;
-  gap: 3rem;
-
-
-  @include common.mediaquery('xl') {
-    gap: 5rem;
-  }
-}
-
-.reactCrop {
-  border-radius: var(--radius-medium);
-  max-width: 60rem;
-  border: 4px solid var(--color-primary);
   grid-row: 2 / 5;
-}
-
-.heading {
-  text-align: center;
-}
-
-.aspectRatioButtons {
-  display: flex;
-  gap: 1rem;
-  justify-content: center;
-
-  @include common.mediaquery('xl') {
-    justify-content: space-around;
-    gap: 5rem;
-  }
 }
 
 .buttonCenter {
