--- a/components/molecules/cropPostImage/cropPostImage.module.scss
+++ b/components/molecules/cropPostImage/cropPostImage.module.scss
@@ -2,15 +2,32 @@
 
 .reactCrop {
   border-radius: var(--radius-medium);
-  border: 4px solid var(--color-secondary);
+  border: 4px solid var(--color-primary);
   display: flex;
   justify-content: center;
   align-items: center;
+  justify-self: center;
   grid-row: 2 / 5;
+
+
+  @include common.mediaquery('lg') {
+    img {
+      max-height: 70rem;
+      min-width: 50rem;
+    }
+  }
 }
 
-.buttonCenter {
+
+.heading {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  gap: 2rem;
+  flex-direction: column;
+
+  @include common.mediaquery('lg') {
+    gap: 0;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
