--- a/components/pages/createPost/createPost.module.scss
+++ b/components/pages/createPost/createPost.module.scss
@@ -3,10 +3,11 @@
 .createPost {
   display: grid;
   row-gap: 4rem;
-  width: var(--create-post-width);
-  margin-inline: auto;
+  margin-inline: calc(2rem + 4vw);
 
   @include common.mediaquery('lg') {
+    width: var(--create-post-width);
+    margin-inline: auto;
     row-gap: 6rem;
   }
 }
@@ -14,4 +15,12 @@
 .actionButtons {
   display: flex;
   justify-content: space-between;
+}
+
+.input,
+.actionButtons {
+  @include common.mediaquery('lg') {
+    margin-inline: auto;
+    width: 80%;
+  }
 }
