--- a/components/molecules/cropPostImage/cropPostImage.module.scss
+++ b/components/molecules/cropPostImage/cropPostImage.module.scss
@@ -1,45 +1,33 @@
 @use '/styles/common.scss';
 
-.cropPost {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  font-weight: 600;
-  cursor: pointer;
-  gap: 3rem;
-
-
-  @include common.mediaquery('xl') {
-    gap: 5rem;
-  }
-}
-
 .reactCrop {
   border-radius: var(--radius-medium);
-  max-width: 60rem;
   border: 4px solid var(--color-primary);
-  grid-row: 2 / 5;
-}
-
-.heading {
-  text-align: center;
-}
-
-.aspectRatioButtons {
-  display: flex;
-  gap: 1rem;
-  justify-content: center;
-
-  @include common.mediaquery('xl') {
-    justify-content: space-around;
-    gap: 5rem;
-  }
-}
-
-.buttonCenter {
   display: flex;
   justify-content: center;
   align-items: center;
+  justify-self: center;
+  grid-row: 2 / 5;
+
+
+  @include common.mediaquery('lg') {
+    img {
+      max-height: 70rem;
+      min-width: 50rem;
+    }
+  }
+}
+
+
+.heading {
+  display: flex;
+  gap: 2rem;
+  flex-direction: column;
+
+  @include common.mediaquery('lg') {
+    gap: 0;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
