--- a/components/Layout/layout.module.scss
+++ b/components/Layout/layout.module.scss
@@ -1,7 +1,11 @@
 @use '/styles/common.scss';
 
 .children {
-  padding: 5rem 2rem;
+  padding: 2rem 2.5rem;
   max-width: 140rem;
   margin: 0 auto;
+
+  @include common.mediaquery('lg') {
+    padding: 5rem 2rem;
+  }
 }
