--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -7,6 +7,7 @@
   transition: all 100ms ease-in-out;
   transition-property: transform;
   border: none;
+  text-transform: capitalize;
 
   &:hover {
     cursor: pointer;
