--- a/components/organisms/header/header.module.scss
+++ b/components/organisms/header/header.module.scss
@@ -10,12 +10,11 @@
   padding: 0 2rem;
 
   @include common.mediaquery('sm') {
-    padding: 0 calc(2rem + 10vw);
+    padding: 0.5rem calc(2rem + 10vw);
   }
 
   @include common.mediaquery('lg') {
     grid-template-columns: repeat(3, 1fr);
-
   }
 
   @include common.mediaquery('xl') {
@@ -23,8 +22,13 @@
   }
 }
 
+.anchor {
+  display: flex;
+  align-self: center;
+  justify-self: flex-start;
+}
+
 .heading {
-  margin: 1.5rem 0;
   font-size: 3rem;
 }
 
@@ -43,6 +47,7 @@
 
   @include common.mediaquery('lg') {
     position: static;
+    z-index: 0;
     justify-content: flex-end;
     padding: 0;
     background-color: transparent;
