--- a/components/organisms/header/header.module.scss
+++ b/components/organisms/header/header.module.scss
@@ -47,6 +47,7 @@
 
   @include common.mediaquery('lg') {
     position: static;
+    border: 0;
     z-index: 0;
     justify-content: flex-end;
     padding: 0;
