--- a/components/pages/account/account.module.scss
+++ b/components/pages/account/account.module.scss
@@ -40,7 +40,8 @@
 
   @include common.mediaquery('lg') {
     display: flex;
-    margin: 1.5rem 0;
+    margin: 0;
+    margin-bottom: 1.5rem;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     gap: 4rem;
@@ -131,6 +132,7 @@
     position: static;
     font-size: 3rem;
     transform: translateX(-2rem) translateY(-7rem);
+    grid-row: 2/3;
   }
 }
 
@@ -138,6 +140,7 @@
   background-color: var(--bg-primary);
   border-radius: var(--radius-medium);
   padding: 3rem;
+
 }
 
 .menuList {
