--- a/components/molecules/cropImage/cropImage.module.scss
+++ b/components/molecules/cropImage/cropImage.module.scss
@@ -18,16 +18,15 @@
   }
 }
 
-
-.heading {
+.cropContainer {
   display: flex;
-  gap: 2rem;
   flex-direction: column;
+  gap: 2rem;
 
   @include common.mediaquery('lg') {
     gap: 0;
-    flex-direction: row;
     align-items: center;
+    flex-direction: row;
     justify-content: space-between;
   }
 }
