--- a/components/organisms/header/header.module.scss
+++ b/components/organisms/header/header.module.scss
@@ -14,6 +14,8 @@
   }
 
   @include common.mediaquery('lg') {
+    position: sticky;
+    top: 0;
     grid-template-columns: repeat(3, 1fr);
   }
 
