--- a/components/organisms/homepagePost/homepagePost.module.scss
+++ b/components/organisms/homepagePost/homepagePost.module.scss
@@ -21,7 +21,7 @@
   width: 100%;
   max-height: 100%;
   object-fit: contain;
-  border-block: var(--border-primary);
+  border-block: var(--border-secondary);
 }
 
 .options {
