--- a/components/molecules/postButtons/postButtons.module.scss
+++ b/components/molecules/postButtons/postButtons.module.scss
@@ -10,6 +10,18 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  font-size: 3rem;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.count {
+  font-size: 2rem;
+  font-weight: 600;
+  position: relative;
+  top: -5px;
 }
 
 .button {
@@ -17,4 +29,8 @@
   border: 0;
   font: inherit;
   display: flex;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
