--- a/components/organisms/header/header.module.scss
+++ b/components/organisms/header/header.module.scss
@@ -16,6 +16,7 @@
   @include common.mediaquery('lg') {
     position: sticky;
     top: 0;
+    z-index: 1;
     grid-template-columns: repeat(3, 1fr);
   }
 
