--- a/components/molecules/postButtons/postButtons.module.scss
+++ b/components/molecules/postButtons/postButtons.module.scss
@@ -3,6 +3,7 @@
   align-items: flex-start;
   gap: 2rem;
   margin: 1rem 1rem;
+  margin-bottom: 0;
 }
 
 .item {
@@ -11,10 +12,10 @@
   align-items: center;
   flex-direction: column;
   font-size: 3rem;
+}
 
-  &:hover {
-    cursor: pointer;
-  }
+.itemLast {
+  margin-left: auto;
 }
 
 .count {
@@ -27,7 +28,6 @@
 .button {
   background-color: transparent;
   border: 0;
-  font: inherit;
   display: flex;
 
   &:hover {
