--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -48,6 +48,7 @@ video {
   max-width: 100%;
 }
 
+textarea,
 button,
 input {
   font: inherit;
@@ -58,12 +59,6 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
-// @media (prefers-color-scheme: dark) {
-//   html {
-//     color-scheme: dark;
-//   }
-// }
 
 :root {
   --color-primary: #3178c6;
@@ -80,7 +75,7 @@ a {
   --bg-primary: #fafafa;
   --bg-white: #ffffff;
   --bg-gray: #efefef;
-  --bg-overlay: rgb(0, 0, 0, 0.6);
+  --bg-overlay: rgb(0, 0, 0, 0.67);
   --border-primary: 1px solid rgb(202, 202, 202);
   --border-secondary: 1px solid rgb(219, 219, 219);
 
@@ -97,12 +92,7 @@ a {
     --itemSize: 3.5rem;
   }
 
-
   --create-post-width: min(80rem, 70%);
-  // @media (prefers-color-scheme: dark) {
-  //   --text-primary: #ffffff;
-  //   --bg-primary: #2e2e2e;
-  // }
 }
 
 .visually-hidden {
