--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -48,6 +48,7 @@ video {
   max-width: 100%;
 }
 
+textarea,
 button,
 input {
   font: inherit;
@@ -59,12 +60,6 @@ a {
   text-decoration: none;
 }
 
-// @media (prefers-color-scheme: dark) {
-//   html {
-//     color-scheme: dark;
-//   }
-// }
-
 :root {
   --color-primary: #3178c6;
   --color-secondary: #7db5f5;
@@ -72,6 +67,7 @@ a {
   --color-error: #d64242;
   --color-white: #fff;
   --color-disabled: rgb(77, 86, 107);
+  --color-separator: rgb(145, 143, 143);
 
   --text-primary: #262626;
   --text-placeholder: rgb(75, 74, 74);
@@ -79,8 +75,8 @@ a {
   --bg-primary: #fafafa;
   --bg-white: #ffffff;
   --bg-gray: #efefef;
-  --bg-overlay: rgb(0, 0, 0, 0.6);
-  --border-primary: 1px solid rgb(160, 160, 160);
+  --bg-overlay: rgb(0, 0, 0, 0.67);
+  --border-primary: 1px solid rgb(202, 202, 202);
   --border-secondary: 1px solid rgb(219, 219, 219);
 
   --radius-small: 0.6rem;
@@ -88,6 +84,7 @@ a {
 
 
   --shadow-primary: 0 4px 10px 2px rgb(0, 0, 0, 0.15);
+  --shadow-secondary: 0 4px 10px 1px rgb(0, 0, 0, 0.05);
 
   --itemSize: 2.75rem;
 
@@ -95,12 +92,7 @@ a {
     --itemSize: 3.5rem;
   }
 
-
   --create-post-width: min(80rem, 70%);
-  // @media (prefers-color-scheme: dark) {
-  //   --text-primary: #ffffff;
-  //   --bg-primary: #2e2e2e;
-  // }
 }
 
 .visually-hidden {
@@ -127,11 +119,12 @@ a {
   &::before {
     content: '';
     z-index: -1;
-    width: 2.5em;
+    width: 2.7em;
     height: 90%;
     position: absolute;
-    left: -0.75em;
+    left: -0.55em;
     top: 5%;
+    border-radius: 3px;
     background-color: var(--color-secondary);
   }
 }
