--- a/components/organisms/header/header.module.scss
+++ b/components/organisms/header/header.module.scss
@@ -14,6 +14,9 @@
   }
 
   @include common.mediaquery('lg') {
+    position: sticky;
+    top: 0;
+    z-index: 1;
     grid-template-columns: repeat(3, 1fr);
   }
 
@@ -43,7 +46,7 @@
   background-color: var(--bg-white);
   bottom: 0;
   left: 0;
-  padding-top: 0.5rem;
+  padding: 0.5rem 0;
   border-top: var(--border-secondary);
   z-index: 1;
 
