--- a/components/organisms/homepagePost/homepagePost.module.scss
+++ b/components/organisms/homepagePost/homepagePost.module.scss
@@ -1,37 +1,48 @@
+@use '/styles/common.scss';
+
 .post {
   border: var(--border-primary);
   border-radius: var(--radius-medium);
   background-color: var(--bg-white);
 }
 
-.header {
-  margin: 1rem;
-  display: flex;
-}
-
-.link {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  font-size: 1.5rem;
-  font-weight: 600;
-}
 
 .image {
   width: 100%;
   max-height: 100%;
   object-fit: contain;
-  border-block: var(--border-primary);
+  border-block: var(--border-secondary);
+  background-color: var(--bg-primary);
+
+  @include common.mediaquery('lg') {
+    min-height: 40rem;
+  }
 }
 
-.options {
-  margin-left: auto;
-  display: flex;
-  gap: 1.5rem;
-  align-items: center;
+.bottom {
+  font-size: 2rem;
+  display: grid;
+  gap: 1rem;
+  padding: 0 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
-.followBtn {
-  padding: 0.5em 1em;
-  font-size: 1.75rem;
+
+.description {
+  word-break: break-all;
+}
+
+.author {
+  font-weight: 600;
+
+  &::after {
+    content: ' ';
+  }
+}
+
+.showMore {
+  background-color: transparent;
+  border: none;
+  color: var(--color-disabled);
+  cursor: pointer;
 }
