fix: add console log for debugging

--- a/components/atoms/avatar/avatar.module.scss
+++ b/components/atoms/avatar/avatar.module.scss
@@ -6,8 +6,8 @@
   border-radius: 100%;
   min-width: 3rem;
   box-shadow: 0 0 0 2px var(--color-secondary);
-  min-width: var(--size);
-  min-height: var(--size);
+  width: var(--size);
+  height: var(--size);
   font-size: var(--size);
 
 
