--- a/components/molecules/commentForm/commentForm.module.scss
+++ b/components/molecules/commentForm/commentForm.module.scss
@@ -11,6 +11,7 @@
   min-height: 5rem;
   resize: vertical;
   border-radius: var(--radius-small);
+  border-bottom-right-radius: 0;
   padding: 0.5rem;
   border: var(--border-secondary);
 }
