--- a/components/molecules/modal/modal.module.scss
+++ b/components/molecules/modal/modal.module.scss
@@ -16,6 +16,7 @@
   padding-left: 2rem;
   border-top: var(--border-primary);
   font-size: 2.25rem;
+  text-align: left;
 
   @include common.mediaquery('lg') {
     padding: 2rem 0;
@@ -29,12 +30,14 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  text-align: left;
   border: none;
-  text-align: center;
   text-transform: capitalize;
+  font-size: 2rem;
 
   @include common.mediaquery('lg') {
     gap: 2rem;
+    font-size: 2.5rem;
   }
 
   &:not(:disabled) {
@@ -63,5 +66,18 @@
 
   &:focus {
     background-color: var(--color-secondary);
+  }
+}
+
+.heading {
+  border-bottom: var(--border-primary);
+  padding: 1.5rem 0;
+  padding-left: 2rem;
+  font-size: 2.25rem;
+
+  @include common.mediaquery('lg') {
+    padding: 2rem 0;
+    padding-left: 4rem;
+    font-size: 2.5rem;
   }
 }
