--- a/components/molecules/postHeader/postHeader.module.scss
+++ b/components/molecules/postHeader/postHeader.module.scss
@@ -37,6 +37,10 @@
 .optionsButton {
   border: none;
   background-color: transparent;
-  padding: 0.75rem;
   cursor: pointer;
+  font-size: 2.5rem;
+
+  @include common.mediaquery('lg') {
+    font-size: 3rem;
+  }
 }
