--- a/components/organisms/header/header.module.scss
+++ b/components/organisms/header/header.module.scss
@@ -8,15 +8,15 @@
   background-color: var(--bg-white);
   border-bottom: var(--border-secondary);
   padding: 0 2rem;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 
   @include common.mediaquery('sm') {
     padding: 0.5rem calc(2rem + 10vw);
   }
 
   @include common.mediaquery('lg') {
-    position: sticky;
-    top: 0;
-    z-index: 1;
     grid-template-columns: repeat(3, 1fr);
   }
 
@@ -32,9 +32,12 @@
 }
 
 .heading {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 700;
 
+  @include common.mediaquery('lg') {
+    font-size: 3rem;
+  }
 }
 
 .nav {
@@ -46,7 +49,7 @@
   background-color: var(--bg-white);
   bottom: 0;
   left: 0;
-  padding: 0.5rem 0;
+  padding-top: 0.5rem;
   border-top: var(--border-secondary);
   z-index: 1;
 
