--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -60,31 +60,32 @@ a {
   text-decoration: none;
 }
 
+
 :root {
-  --color-primary: #3178c6;
-  --color-secondary: #7db5f5;
-  --color-gray: #fefefe;
-  --color-error: #d64242;
-  --color-white: #fff;
-  --color-disabled: rgb(77, 86, 107);
-  --color-separator: rgb(145, 143, 143);
 
-  --text-primary: #262626;
-  --text-placeholder: rgb(75, 74, 74);
+  --color-primary: hsl(210, 60%, 50%);
+  --color-secondary: hsl(210, 60%, 65%);
+  --color-error: hsl(10, 60%, 50%);
+  --color-white: hsl(0, 100%, 100%);
+  --color-disabled: hsl(210, 50%, 40%);
+  --color-separator: hsl(210, 20%, 60%);
 
-  --bg-primary: #fafafa;
-  --bg-white: #ffffff;
-  --bg-gray: #efefef;
-  --bg-overlay: rgb(0, 0, 0, 0.67);
-  --border-primary: 1px solid rgb(202, 202, 202);
-  --border-secondary: 1px solid rgb(219, 219, 219);
+  --text-primary: hsl(0, 0%, 15%);
+  --text-placeholder: hsl(0, 1%, 29%);
+
+  --bg-white: hsl(0, 0%, 100%);
+  --bg-primary: hsl(0, 0%, 98%);
+  --bg-gray: hsl(0, 0%, 94%);
+  --bg-overlay: hsla(0, 0%, 0%, 0.67);
+  --border-primary: 1px solid hsl(0, 0%, 79%);
+  --border-secondary: 1px solid hsl(0, 0%, 86%);
 
   --radius-small: 0.6rem;
   --radius-medium: 0.9rem;
 
 
-  --shadow-primary: 0 4px 10px 2px rgb(0, 0, 0, 0.15);
-  --shadow-secondary: 0 4px 10px 1px rgb(0, 0, 0, 0.05);
+  --shadow-primary: 0 4px 10px 2px hsla(0, 0%, 0%, 0.15);
+  --shadow-secondary: 0 4px 10px 1px hsla(0, 0%, 0%, 0.05);
 
   --itemSize: 2.75rem;
 
@@ -108,23 +109,4 @@ a {
 
 #__next {
   isolation: isolate;
-}
-
-.heading {
-  text-align: left;
-  position: relative;
-  line-height: 1.5;
-  font-weight: 600;
-
-  &::before {
-    content: '';
-    z-index: -1;
-    width: 2.7em;
-    height: 90%;
-    position: absolute;
-    left: -0.55em;
-    top: 5%;
-    border-radius: 3px;
-    background-color: var(--color-secondary);
-  }
 }
