--- a/components/atoms/accountPost/accountPost.module.scss
+++ b/components/atoms/accountPost/accountPost.module.scss
@@ -6,6 +6,11 @@
   border: var(--border-secondary);
   cursor: pointer;
 
+  aspect-ratio: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   &:hover>.overlay {
     opacity: 1;
   }
@@ -13,11 +18,11 @@
 
 .image {
   width: 100%;
+  height: 100%;
   background-color: var(--bg-white);
   border-radius: var(--radius-small);
   object-fit: contain;
   box-shadow: 0 6px 10px 1px rgb(0, 0, 0, 0.1);
-  height: 18rem;
 
   @include common.mediaquery('lg') {
     min-height: 20rem;
@@ -48,15 +53,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 5rem;
+  gap: 1.5rem;
   background-color: rgb(35, 35, 35, 0.55);
   color: var(--color-white);
+
+  @include common.mediaquery('lg') {
+    gap: 4rem;
+  }
 }
 
 .count {
   display: flex;
   justify-content: center;
-  font-size: 4rem;
+  font-size: 3.25rem;
   align-items: center;
   gap: 0.5rem;
+
+  @include common.mediaquery('lg') {
+    font-size: 4rem;
+  }
 }
