--- a/components/organisms/accountPosts/accountPosts.module.scss
+++ b/components/organisms/accountPosts/accountPosts.module.scss
@@ -3,8 +3,9 @@
 .posts {
   display: grid;
   place-content: center;
+  margin: 0 -1rem;
   margin-top: 2rem;
-  gap: 0.5rem;
+  gap: 1rem;
   grid-template-columns: repeat(2, 1fr);
 
   @include common.mediaquery('lg') {
