feat: loading component

--- a/components/molecules/accountIcon/accountIcon.module.scss
+++ b/components/molecules/accountIcon/accountIcon.module.scss
@@ -31,14 +31,17 @@
   width: 20px;
   height: 20px;
   background-color: var(--bg-white);
-  border-left: var(--border-primary);
-  border-top: var(--border-primary);
+  border-right: var(--border-primary);
+  border-bottom: var(--border-primary);
 
   @include common.mediaquery('lg') {
     top: -10px;
     left: 0;
     right: 0;
     bottom: 0;
+    border: 0;
+    border-left: var(--border-primary);
+    border-top: var(--border-primary);
   }
 }
 
