--- a/components/molecules/postHeader/postHeader.module.scss
+++ b/components/molecules/postHeader/postHeader.module.scss
@@ -39,6 +39,7 @@
   background-color: transparent;
   cursor: pointer;
   font-size: 2.5rem;
+  display: block;
 
   @include common.mediaquery('lg') {
     font-size: 3rem;
