--- a/components/organisms/homepagePost/homepagePost.module.scss
+++ b/components/organisms/homepagePost/homepagePost.module.scss
@@ -9,8 +9,8 @@
 
 .image {
   width: 100%;
-  max-height: 100%;
-  object-fit: contain;
+  height: auto;
+  object-fit: cover;
   border-block: var(--border-secondary);
   background-color: var(--bg-primary);
 
@@ -50,4 +50,10 @@
   border: none;
   color: var(--color-primary);
   cursor: pointer;
+}
+
+.count {
+  font-size: 2rem;
+  font-weight: 600;
+  position: relative;
 }
