--- a/components/pages/account/account.module.scss
+++ b/components/pages/account/account.module.scss
@@ -37,6 +37,18 @@
   margin-top: 2rem;
   grid-column: 1 / 3;
   grid-row: 5 / 6;
+  padding-bottom: 2rem;
+  position: relative;
+
+  &::before {
+    content: '';
+    width: 100%;
+    height: 0.25rem;
+    background-color: var(--color-secondary);
+    border-radius: var(--radius-small);
+    position: absolute;
+    bottom: 0;
+  }
 
   @include common.mediaquery('lg') {
     display: flex;
@@ -46,6 +58,10 @@
     grid-row: 2 / 3;
     gap: 4rem;
     justify-content: stretch;
+
+    &::before {
+      display: none;
+    }
   }
 }
 
@@ -118,13 +134,13 @@
   background-color: transparent;
   border: 0;
   display: flex;
-  padding: 1rem;
   justify-content: center;
   align-items: center;
   position: absolute;
   font-size: 2.5rem;
   right: 1rem;
-  top: -0.5rem;
+  top: 0.5rem;
+  cursor: pointer;
 
   @include common.mediaquery('lg') {
     place-self: center;
@@ -139,7 +155,6 @@
   background-color: var(--bg-primary);
   border-radius: var(--radius-medium);
   padding: 3rem;
-
 }
 
 .menuList {
