--- a/components/Layout/layout.module.scss
+++ b/components/Layout/layout.module.scss
@@ -1,11 +1,44 @@
 @use '/styles/common.scss';
 
 .children {
-  padding: 2rem 2.5rem;
+  padding: 2rem 2rem;
   max-width: 140rem;
   margin: 0 auto;
 
   @include common.mediaquery('lg') {
     padding: 5rem 2rem;
   }
+}
+
+.cookies {
+  position: fixed;
+  --offset: 2rem;
+  right: var(--offset);
+  left: var(--offset);
+  margin: auto;
+  bottom: 6rem;
+  max-width: 40ch;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: var(--bg-white);
+  padding: 1rem 2rem;
+  gap: 1rem;
+  z-index: 2;
+  border-radius: var(--radius-small);
+  border: var(--border-secondary);
+  box-shadow: var(--shadow-primary);
+
+
+  @include common.mediaquery('lg') {
+    right: unset;
+    left: 5rem;
+  }
+}
+
+.cookiesButtons {
+  display: flex;
+  gap: 2rem;
+  width: 100%;
+  justify-content: flex-start;
 }
