fix(loading-state): post mutations

--- a/components/atoms/heading/heading.module.scss
+++ b/components/atoms/heading/heading.module.scss
@@ -16,3 +16,9 @@
     background-color: var(--color-secondary);
   }
 }
+
+.center {
+  text-align: center;
+  width: fit-content;
+  margin-inline: auto;
+}
