--- a/components/molecules/modal/modal.module.scss
+++ b/components/molecules/modal/modal.module.scss
@@ -81,3 +81,11 @@
     font-size: 2.5rem;
   }
 }
+
+.dialog {
+  background-color: var(--bg-white);
+  border-radius: var(--radius-medium);
+  width: min(45rem, 80%);
+  margin-inline: auto;
+  position: relative;
+}
