--- a/components/pages/createPost/createPost.module.scss
+++ b/components/pages/createPost/createPost.module.scss
@@ -55,3 +55,9 @@
   background-color: var(--bg-primary);
   padding: 0 1rem;
 }
+
+.loadingContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+}
