--- a/components/molecules/layoutSearch/layoutSearch.module.scss
+++ b/components/molecules/layoutSearch/layoutSearch.module.scss
@@ -4,8 +4,8 @@
   display: flex;
   align-items: center;
   background-color: var(--bg-gray);
-  border-radius: var(--radius-medium);
-  border: var(--border-secondary);
+  border-radius: var(--radius-small);
+  box-shadow: var(--shadow-secondary);
   margin: 0.75rem 0;
 
   @include common.mediaquery('lg') {
