--- a/components/molecules/input/input.module.scss
+++ b/components/molecules/input/input.module.scss
@@ -28,6 +28,8 @@
 
   background-color: var(--bg-primary);
   color: var(--text-primary);
+  top: -1.25rem;
+  left: 0.5rem;
 
 
   @include common.mediaquery('lg') {
