--- a/components/pages/createPost/createPost.module.scss
+++ b/components/pages/createPost/createPost.module.scss
@@ -44,8 +44,8 @@
   resize: vertical;
   max-width: 100%;
   width: 100%;
-  min-height: 8rem;
-  height: 8rem;
+  min-height: 6rem;
+  height: 6rem;
 }
 
 .label {
@@ -60,4 +60,11 @@
   display: flex;
   flex-direction: column;
   gap: 5rem;
+}
+
+.addPhoto {
+  display: grid;
+  grid-gap: 2rem;
+  gap: 2rem;
+  width: 100%;
 }
