--- a/components/organisms/postModal/postModal.module.scss
+++ b/components/organisms/postModal/postModal.module.scss
@@ -14,12 +14,7 @@
   bottom: 0;
   top: 0;
   margin: auto;
-
   overflow: hidden;
-
-  @include common.mediaquery('lg') {
-    padding: 3rem;
-  }
 }
 
 .imgLoading {
@@ -34,7 +29,16 @@
   object-fit: contain;
 }
 
+.heading {
+  margin-left: 3rem;
+
+  @include common.mediaquery('lg') {
+    margin-left: 5rem;
+  }
+}
+
 .comments {
+  padding: 1rem;
   margin-top: 3rem;
   height: 15rem;
   overflow-y: scroll;
