--- a/components/atoms/tooltip/tooltip.module.scss
+++ b/components/atoms/tooltip/tooltip.module.scss
@@ -4,7 +4,6 @@
 .tooltip {
   position: relative;
   display: inline-block;
-  z-index: 1;
 }
 
 .tip {
@@ -19,7 +18,8 @@
   white-space: nowrap;
   line-height: 1;
   padding: 1rem 1.5rem;
-  --tooltip-arrow-size: 1rem;
+
+  --tooltip-triangle: 2rem;
 
 
   @include common.mediaquery('lg') {
@@ -28,14 +28,17 @@
 
   &::before {
     content: " ";
-    left: 50%;
-    border: solid transparent;
-    height: 0;
-    width: 0;
+    width: var(--tooltip-triangle);
+    height: var(--tooltip-triangle);
     position: absolute;
-    pointer-events: none;
-    border-width: var(--tooltip-arrow-size);
-    margin-left: calc(var(--tooltip-arrow-size) * -1);
+    transform: rotate(45deg);
+    left: 0;
+    right: 0;
+    top: -2rem;
+    margin-inline: auto;
+    border-left: var(--border-secondary);
+    border-top: var(--border-secondary);
+    background-color: var(--bg-white);
   }
 }
 
@@ -44,9 +47,11 @@
   bottom: unset;
 
   &::before {
-    transform: translateY(3rem);
-    filter: drop-shadow(0px 1px 0px var(--border-primary-color));
-    border-top-color: var(--bg-white);
+    top: unset;
+    bottom: -1rem;
+    border: none;
+    border-right: var(--border-secondary);
+    border-bottom: var(--border-secondary);
   }
 }
 
@@ -54,9 +59,11 @@
   bottom: -5.5rem;
 
   &::before {
-    transform: translateY(-3rem);
-    filter: drop-shadow(0px -1px 0px var(--border-primary-color));
-    border-bottom-color: var(--bg-white);
+    top: -1.1rem;
+    bottom: unset;
+    border: none;
+    border-left: var(--border-secondary);
+    border-top: var(--border-secondary);
   }
 }
 
@@ -65,10 +72,16 @@
   left: 5rem;
   transform: translateX(0) translateY(-50%);
 
+  --tooltip-triangle: 1.5rem;
+
   &::before {
-    transform: translateX(-50%);
-    left: 0;
-    filter: drop-shadow(-1px 0px 0px var(--border-primary-color));
-    border-right-color: var(--bg-white);
+    border: none;
+    left: -0.90rem;
+    right: unset;
+    border-left: var(--border-secondary);
+    border-bottom: var(--border-secondary);
+    bottom: 0;
+    top: 0;
+    margin: auto 0;
   }
 }
