--- a/components/organisms/signIn/signIn.module.scss
+++ b/components/organisms/signIn/signIn.module.scss
@@ -29,7 +29,7 @@
   @include common.mediaquery('lg') {
     width: 50%;
     margin: 0 auto;
-    margin-top: 6rem;
+    margin-top: 7rem;
   }
 
 }
@@ -53,8 +53,9 @@
   @include common.mediaquery('lg') {
     width: 50%;
     margin: 0 auto;
-    margin-top: 6rem;
+    margin-top: 7rem;
   }
+
 
 }
 
@@ -65,6 +66,7 @@
 }
 
 .google {
+  color: var(--color-white);
   font-weight: 600;
   margin-left: 1rem;
 }
