--- a/components/molecules/comment/comment.module.scss
+++ b/components/molecules/comment/comment.module.scss
@@ -1,12 +1,64 @@
+@use '/styles/common.scss';
+
 .comment {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 4.5rem 1fr;
   grid-template-rows: repeat(2, 1fr);
-  gap: 1rem;
+  padding: 1rem;
+  column-gap: 0.25rem;
+  place-content: center;
+  border-bottom: var(--border-secondary);
+
+  @include common.mediaquery('lg') {
+    column-gap: 1rem;
+    grid-template-columns: 6rem 1fr;
+  }
 }
 
 .avatar {
-  width: 4rem;
-  height: 4rem;
-  grid-row: 1 / 3;
+  justify-self: center;
+  width: 3rem;
+  height: 3rem;
+
+  @include common.mediaquery('lg') {
+    width: 4rem;
+    height: 4rem;
+  }
+}
+
+.author {
+  font-weight: 600;
+}
+
+.commentText {
+  word-break: break-all;
+}
+
+.createdAt {
+  margin-left: 0.5rem;
+  font-size: 1.5rem;
+  border: none;
+  background-color: transparent;
+
+  @include common.mediaquery('lg') {
+    margin-left: 1.5rem;
+    font-size: 2rem;
+  }
+}
+
+.info {
+  grid-column: 1 / 3;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.likeBtn {
+  @extend .createdAt;
+  display: flex;
+  gap: 0.4rem;
+  border: none;
+  background-color: transparent;
+  align-items: center;
+  cursor: pointer;
 }
