--- a/components/organisms/postModal/postModal.module.scss
+++ b/components/organisms/postModal/postModal.module.scss
@@ -14,11 +14,10 @@
   bottom: 0;
   top: 0;
   margin: auto;
-
   overflow: hidden;
 
   @include common.mediaquery('lg') {
-    padding: 3rem;
+    padding-bottom: 3rem;
   }
 }
 
@@ -35,7 +34,20 @@
 }
 
 .comments {
-  margin-top: 3rem;
   height: 15rem;
   overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 1rem;
+
+  @include common.mediaquery('lg') {
+    margin-top: 3rem;
+  }
+}
+
+.commentsContainer {
+  @include common.mediaquery('lg') {
+    margin: 0 5rem;
+  }
 }
